--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,22 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0px;
+  padding: 0px;
 }
+
+body {
+  background-color: #121212;
+}
+body .header {
+  width: 100%;
+}
+body .header .header__nav {
+  width: 100%;
+}
+body .header .header__nav__container {
+  color: blueviolet !important;
+}
+body .header .header__nav__container__rightMenu {
+  flex-grow: 0;
+}
+
+/*# sourceMappingURL=styles.css.map */
